--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   />
     <meta
     name="description"
-    content="Share crypto from your Safe via links without funds leaving the account until claimed"
+    content="Create a session for your"
   />
-    <title>Share crypto from Safe via links</title>
+    <title>Create a session for your  </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
