--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   />
     <meta
     name="description"
-    content="Create a session for your"
+    content="Create a session for your Safe"
   />
-    <title>Create a session for your  </title>
+    <title>Create a session for your  Safe</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
