chore: fixes header component and typos

--- a/web/index.html
+++ b/web/index.html
@@ -21,9 +21,9 @@
   />
     <meta
     name="description"
-    content="Share crypto from your Safe via links without funds leaving the account until claimed"
+    content="Create a session for your Safe"
   />
-    <title>Share crypto from Safe via links</title>
+    <title>Create a session for your  Safe</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
